--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "yeoman-conductor",
   "version": "0.0.2",
+  "main": "lib/conductor.js",
   "description": "A module that let's you run a yeoman generator from another one.",
   "homepage": "https://github.com/danielchatfield/yeoman-conductor",
   "bugs": "https://github.com/danielchatfield/yeoman-conductor/issues",
